# my-music

./: .gitattributes  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
release-notes/: v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.9.md  v0.2.0.md
scripts/: github-release.mjs  release.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  config.rs  decoder.rs  kgm.rs  lib.rs  library.rs  logger.rs  lyrics.rs  main.rs  media_shortcuts.rs  models.rs  ncm.rs  playlist.rs  scanner.rs  statistics.rs  utils.rs
src-tauri/src/decoder/: kgm.rs  mod.rs  ncm.rs  scanner.rs
src-tauri/src/interaction/: commands.rs  config.rs  decoder.rs  library.rs  lyrics.rs  media_shortcuts.rs  mod.rs  models.rs  playlist.rs  statistics.rs
src-tauri/src/lyrics_search/: mod.rs
src-tauri/src/lyrics_search/error/: fetcher.rs  general.rs  mod.rs  parser.rs  searcher.rs
src-tauri/src/lyrics_search/fetchers/: base_api.rs  kugou.rs  mod.rs  netease.rs  qqmusic.rs
src-tauri/src/lyrics_search/models/: line_info.rs  lyrics_data.rs  mod.rs  music_player.rs  track_metadata.rs
src-tauri/src/lyrics_search/parsers/: kugou.rs  lrc.rs  mod.rs  netease.rs  qqmusic.rs
src-tauri/src/lyrics_search/parsers/decrypt/: krc.rs  mod.rs  netease.rs  qrc.rs
src-tauri/src/lyrics_search/providers/: kugou.rs  mod.rs  netease.rs  qqmusic.rs
src-tauri/src/lyrics_search/searchers/: kugou.rs  mod.rs  netease.rs  qqmusic.rs
src/components/: AudioEngine.vue  ConfirmDialog.vue  ContentArea.vue  ContextMenu.vue  CustomScrollbar.vue  DesktopLyricsWindow.vue  GlobalNotification.vue  LibraryScanDialog.vue  LibrarySidebar.vue  LineLyricsRenderer.vue  NowPlayingPage.vue  PlaybackQueuePanel.vue  PlayerBar.vue  SettingsPanel.vue  TopBar.vue  TrackContextMenu.vue  TrackDetailDialog.vue
src/stores/: app_actions.ts  app_config.ts  library.ts  library_catalog.ts  library_view.ts  notifications.ts  playback.ts  player_queue.ts  ui.ts
src/styles/: app.css
src/types/: music.ts
src/utils/: audio_player.ts  frontend_audio.ts  lyrics.ts  track.ts
