[package]
name = "my-music"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
rodio = { version = "=0.22.2", default-features = false, features = [
    "playback",
    "symphonia-all",
] }
walkdir = "2"
base64 = "0.22"
lofty = "0.24"
sha2 = "0.11.0"
aes = "0.9.1"
infer = "0.19"
xz2 = "0.1"
lyrix = { git = "https://github.com/cXp1r/Lyrix.git" }
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
